--- a/JavaScript/Exercicio_Solved/Challanger_4.html
+++ b/JavaScript/Exercicio_Solved/Challanger_4.html
@@ -31,7 +31,7 @@
                 resultado = num1 - num2;
             }
 
-            return resultado
+            return resultado;
 
         }
         // variáveis para apresentar o resultado
