:art: Modal's inclusion and start of LocalStorage
Refactor: Add new functionalities, such as: Modal components of bootstrap in case of success and error of data inclusion. I've started adding expense data to the Consult page.

--- a/Projetos JavaScript/App - Personal Budget/consult.html
+++ b/Projetos JavaScript/App - Personal Budget/consult.html
@@ -20,12 +20,14 @@
   <!-- Bootstrap fim -->
 
   <!-- Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://kit.fontawesome.com/131d03fe17.js" crossorigin="anonymous"></script>
+
+  <!--Javascript -->
   <script src="app.js"></script>
 
 </head>
 
-<body>
+<body onload="loadExpenseList()">
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
@@ -131,6 +133,9 @@
           </thead>
 
           <tbody>
+            <tr>
+              <td>15/03/2018</td>
+            </tr>
           </tbody>
         </table>
       </div>
