--- a/Projetos JavaScript/App - Personal Budget/index.html
+++ b/Projetos JavaScript/App - Personal Budget/index.html
@@ -20,7 +20,7 @@
   <!-- Bootstrap fim -->
 
   <!-- Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://kit.fontawesome.com/131d03fe17.js" crossorigin="anonymous"></script>
   <script src="app.js"></script>
 
 </head>
@@ -118,6 +118,26 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="insertExpense" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div id="modal_title_div">
+          <h5 class="modal-title" id="modal_title"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modal_content"></div>
+        <div class="modal-footer">
+          <button type="button" data-dismiss="modal" id="modal_btn"></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
