--- a/Projetos JavaScript/App - Personal Budget/index.html
+++ b/Projetos JavaScript/App - Personal Budget/index.html
@@ -21,6 +21,8 @@
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/131d03fe17.js" crossorigin="anonymous"></script>
+
+  <!-- Javascript -->
   <script src="app.js"></script>
 
 </head>
